--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb+srv://innate:123Qwerty@cluster0.jv5o1m9.mongodb.net/test
+DATABASE_URL = mongodb+srv://:@cluster0.jv5o1m9.mongodb.net/test
